konflux-core/integration/core/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_integration-service-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: integration-service-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: integration-service-webhook-service
      namespace: integration-service
      path: /validate-appstudio-redhat-com-v1beta1-integrationtestscenario
  failurePolicy: Fail
  name: vintegrationtestscenario.kb.io
  rules:
  - apiGroups:
    - appstudio.redhat.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - integrationtestscenarios
  sideEffects: None
